# user_preferences

./: Makefile  README.md  bandit_report.html  pyproject.toml
preferences/: manage.py
preferences/preferences/: asgi.py  settings.py  urls.py  views.py  wsgi.py
preferences/templates/: base.html  preferences.html
