[tool.poetry]
name = "preferences-app"
version = "0.1.0"
description = ""
authors = ["Yuriy Senko <yuri.senko@capgemini.com>"]
readme = "README.md"
packages = [{include = "preferences_app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {version = "^0.88.0", extras = ["all"]}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
