[tool.poetry]
name = "preferences-app"
version = "0.1.0"
description = ""
authors = ["Yuriy Senko <yuri.senko@capgemini.com>"]
readme = "README.md"
packages = [{include = "preferences_app"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.4"


[tool.poetry.group.dev.dependencies]
pylint = "^2.15.9"
bandit = "^1.7.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
